Added all csv files to list; reset table after button click

--- a/geoData.html
+++ b/geoData.html
@@ -104,7 +104,396 @@
 									    <div class="row" style="margin-top:10px">
 									      <span>Select csv</span>
 									      <select id="csv_list" style="margin-left:20px">
-									      <option value="ACCNTOWNER">ACCNTOWNER</option>
+										<option>ACCNTOWNER</option>
+										<option>
+ADPTINVLDC
+</option>
+<option>
+AGORGINDEX
+</option>
+<option>
+AIRPOLDTHS
+</option>
+<option>
+ATMSPERPOP
+</option>
+<option>
+BANKPERPOP
+</option>
+<option>
+BASELCONVN
+</option>
+<option>
+BIOMASSTON
+</option>
+<option>
+BIRTHREGIS
+</option>
+<option>
+CELLOWNERS
+</option>
+<option>
+CENSUSDONE
+</option>
+<option>
+CLNENGYFIN
+</option>
+<option>
+CORNPRANOM
+</option>
+<option>
+CROPCONSPC
+</option>
+<option>
+DEATHREGIS
+</option>
+<option>
+DEGRADLAND
+</option>
+<option>
+DISLOSSGDP
+</option>
+<option>
+DISRISKPLN
+</option>
+<option>
+DISTDISRUP
+</option>
+<option>
+EMISSVALADD
+</option>
+<option>
+ENGYINTGDP
+</option>
+<option>
+FFUELFPTON
+</option>
+<option>
+FFUELMFPPC
+</option>
+<option>
+FFUNSTPLAN
+</option>
+<option>
+FRWTRWDRAW
+</option>
+<option>
+FUNPOSTATS
+</option>
+<option>
+FVOLAIRTKM
+</option>
+<option>
+FVOLRTKM
+</option>
+<option>
+GOVEXPBDGT
+</option>
+<option>
+GOVTREVGDP
+</option>
+<option>
+GRHHEXPDPC
+</option>
+<option>
+GRTGDPEMPL
+</option>
+<option>
+GWRREALGDP
+</option>
+<option>
+HLTHEXPTFP
+</option>
+<option>
+HTECHVALUE
+</option>
+<option>
+HTECHVAMAN
+</option>
+<option>
+ILLFISHLAW
+</option>
+<option>
+INDPMGMTFR
+</option>
+<option>
+INTHOMVCTM
+</option>
+<option>
+INTNETSUBS
+</option>
+<option>
+LBRDNORISK
+</option>
+<option>
+LBRDUKRISK
+</option>
+<option>
+LBREEDRISK
+</option>
+<option>
+LRPLTRECON
+</option>
+<option>
+LTMGMTFORP
+</option>
+<option>
+MARINEPROT
+</option>
+<option>
+MARPREEGTN
+</option>
+<option>
+MARPREFITN
+</option>
+<option>
+MARTECHBGT
+</option>
+<option>
+MATFPPERCAP
+</option>
+<option>
+MATHMORRATE
+</option>
+<option>
+MATHPROFIC
+</option>
+<option>
+MFPBMASSPC
+</option>
+<option>
+MFPTOTALPC
+</option>
+<option>
+MILLPRANOM
+</option>
+<option>
+MONTREALC
+</option>
+<option>
+MORTBADWTR
+</option>
+<option>
+MTGREENIDX
+</option>
+<option>
+NEONATMORT
+</option>
+<option>
+NFUNSTPLAN
+</option>
+<option>
+NMETALCPRC
+</option>
+<option>
+NMETALFPPC
+</option>
+<option>
+NONMETALTON
+</option>
+<option>
+NOPARISPRI
+</option>
+<option>
+ODAAGRICUL
+</option>
+<option>
+ODAAIDTRAD
+</option>
+<option>
+ODABIODIVR
+</option>
+<option>
+ODAGROSSDSP
+</option>
+<option>
+ODASCHOLAR
+</option>
+<option>
+ORECONPERC
+</option>
+<option>
+OREMFPPERC
+</option>
+<option>
+OREMTFPTON
+</option>
+<option>
+PARISHRINT
+</option>
+<option>
+PCHLDABUSE
+</option>
+<option>
+PERPOPELEC
+</option>
+<option>
+POISONMORT
+</option>
+<option>
+POPCLNENGY
+</option>
+<option>
+POPDISTDAP
+</option>
+<option>
+POPEXPRFGM
+</option>
+<option>
+POPSAFEWTR
+</option>
+<option>
+PRBRTSKHEL
+</option>
+<option>
+PREMALNUTR
+</option>
+<option>
+PREVSTUNFV
+</option>
+<option>
+PREVUNDNOR
+</option>
+<option>
+PRNDEXPGDP
+</option>
+<option>
+PROBIODIVR
+</option>
+<option>
+PROINTUSER
+</option>
+<option>
+PROSAFEWTR
+</option>
+<option>
+PROSSCRDIT
+</option>
+<option>
+PROSSINDVA
+</option>
+<option>
+PROTECTFOR
+</option>
+<option>
+PRPBDGTTAX
+</option>
+<option>
+PVOLAIRPKM
+</option>
+<option>
+PVOLRPKM
+</option>
+<option>
+RAWMTFPTON
+</option>
+<option>
+RECYCLETON
+</option>
+<option>
+RECYCLRATE
+</option>
+<option>
+REGISBIRTH
+</option>
+<option>
+RENEWENGCON
+</option>
+<option>
+RESEARCHER
+</option>
+<option>
+RICEPRANOM
+</option>
+<option>
+RORGPREDUM
+</option>
+<option>
+RORGPREEDU
+</option>
+<option>
+RORGPREEDUF
+</option>
+<option>
+ROTTERDAMC
+</option>
+<option>
+RTHOMOCIDE
+</option>
+<option>
+SAFEWSTWTR
+</option>
+<option>
+SCPNACTPLN
+</option>
+<option>
+SEXVIOLENC
+</option>
+<option>
+SEXVIOLENF
+</option>
+<option>
+SEXVIOLENM
+</option>
+<option>
+SHREXPORTS
+</option>
+<option>
+SORGPRANOM
+</option>
+<option>
+STKHLDPROG
+</option>
+<option>
+STKHOLDPLN
+</option>
+<option>
+STORGENELR
+</option>
+<option>
+STPLNEXFUN
+</option>
+<option>
+SUSFORMGMT
+</option>
+<option>
+TBAQUFMNGD
+</option>
+<option>
+TODAHEALTH
+</option>
+<option>
+TWOMINMTHF
+</option>
+<option>
+TWOMINMTHM
+</option>
+<option>
+TWOMINREAD
+</option>
+<option>
+UNEMPYOUTH
+</option>
+<option>
+UNSENDETAIN
+</option>
+<option>
+URBPOPSLUM
+</option>
+<option>
+VALSTATCAP
+</option>
+<option>
+WHTPRIANOM
+</option>
+<option>
+WTREFFCHNG
+</option>
+<option>
+WWTARIFAVG
+</option>
+
+
 									      </select>
 									    </div>
 
