Added description text; removed empty rows from table

--- a/geoData.html
+++ b/geoData.html
@@ -561,6 +561,9 @@ WWTARIFAVG
 						</div>
 					</div>
 
+
+			<p id="metadata-text"></p>
+					
 					<div id="countries-overview" class="row box" style="width:100%; margin:25px 0px">
 						<div id="countries-overview-banner" style="width:100%; text-align:center">
 							<h2 style="margin-bottom:5px">Countries</h2>
