Fixed line breaks; added raw data button

--- a/geoData.html
+++ b/geoData.html
@@ -497,8 +497,11 @@ WWTARIFAVG
 									      </select>
 									    </div>
 
-				 						<button type="button" style="font-size:0.6em" onclick="read_geodata_data()">Show data</button>
-
+				 					    <button type="button" style="font-size:0.6em" onclick="read_geodata_data()">Show data</button>
+<!--									    
+<a href = "https://raw.githubusercontent.com/wmgeolab/geoDataWeb/main/ancillaryData/gdOpen/sourceData/ADM0/" + document.csv_list.value + ".csv">View raw data</a>
+-->
+				 					    <button type="button" style="font-size:0.6em" onclick="goto_raw_csv_file()">View raw data</button>
 
 									<!--	<script src="./assets/js/geoData.js">read_geodata_data()</script> -->
 										
