Changed tab name to Country Data

--- a/geoData.html
+++ b/geoData.html
@@ -94,8 +94,7 @@
 									<ul class='etabs'>
 										<li class='tab'><a href="geoContrastCountries.html">Global Boundaries</a></li>
 										<li class='tab'><a href="geoContrast.html">Country Boundaries</a></li>
-
-										<li class='tab active'><a href="geoData.html">New Geodata Tab!!!</a></li>
+										<li class='tab active'><a href="geoData.html">Country Data</a></li>
 									</ul>
 									
 									<div id="countries" class="box" style="font-size:14pt; height:575px">
