Fix incorrect area calcs

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -539,7 +539,7 @@
 							</div>
 							<span class="gb-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 							<br>
-							<table id="feature-compare-left-table" style="margin-left:15px">
+							<table id="feature-compare-left-table" style="width:100%; margin-left:15px">
 								<tr>
 									<td>Level:</td>
 									<td id="feature-compare-stats-gb-level" class="stats-value"></td>
@@ -581,7 +581,7 @@
 							</div>
 							<span class="comp-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 							<br>
-							<table id="feature-compare-right-table" style="margin-left:15px">
+							<table id="feature-compare-right-table" style="width:100%; margin-left:15px">
 								<tr>
 									<td>Level:</td>
 									<td id="feature-compare-stats-comp-level" class="stats-value"></td>
