Starting to move metadata text

--- a/geoData.html
+++ b/geoData.html
@@ -103,6 +103,8 @@
 									    <div class="row" style="margin-top:10px">
 									      <span>Select csv</span>
 									      <select id="csv_list" style="margin-left:20px">
+
+
 										<!--
 										<option>ACCNTOWNER</option>
 										<option>
@@ -495,6 +497,8 @@ WWTARIFAVG
 -->
 
 									      </select>
+												<p style="font-size:8px;"  id="metadata-text"></p>
+ 
 									    </div>
 
 									    <script>add_options()</script>
@@ -531,7 +535,6 @@ WWTARIFAVG
 					</div>
 
 
-			<p id="metadata-text"></p>
 					
 					<div id="countries-overview" class="row box" style="width:100%; margin:25px 0px">
 						<div id="countries-overview-banner" style="width:100%; text-align:center">
