--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
 				<!-- Header -->
 				<header id="header">
-					<span class="logo"><a href="index.html"><strong>geoBoundaries</strong></a> by the <a
-							href="http://geolab.wm.edu">William & Mary geoLab</a></span>
+					<span class="logo"><a href="index.html"><strong>geoBoundaries</strong></a> built by the <a href="https://github.com/wmgeolab/geoBoundaries">community</a> and <a
+							href="http://geolab.wm.edu">W&M geoLab</a></span>
 					<ul class="icons">
 						<li><a href="https://twitter.com/wmgeolab?lang=en" class="icon brands fa-twitter"><span
 									class="label">Twitter</span></a></li>
@@ -107,12 +107,9 @@
 							<p>The world's largest open, free and research-ready database of political administrative
 								boundaries.</p>
 						</header>
-						<p>Produced and maintained by the William & Mary <a href="http://geolab.wm.edu">geoLab</a> and
-							<a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">open data
-								community</a> since 2017, the geoBoundaries Global Database of Political Administrative
+						<p>Built by the <a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community</a> and <a href="https://geolab.wm.edu">William & Mary geoLab</a>, the geoBoundaries Global Database of Political Administrative
 							Boundaries Database is an online, open license resource of boundaries (i.e., state, county)
-							for every country in
-							the world. We currently track approximately 1 million boundaries within over 200 entities,
+							for every country in the world. We currently track approximately 1 million boundaries within over 200 entities,
 							including all 195 UN member states. All boundaries are available to view or download in
 							common file formats, including
 							shapefiles;
