Starting to figure out how to color code country data

--- a/geoData.html
+++ b/geoData.html
@@ -500,7 +500,7 @@ WWTARIFAVG
  
 									    </div>
 
-									    <button type="button" style="font-size:0.6em" onclick="read_geodata_data()">Show data</button>
+									    <button type="button" style="font-size:0.6em" onclick="read_geodata_data(); new_update_map_countries()">Show data</button>
 <!--									    
 <a href = "https://raw.githubusercontent.com/wmgeolab/geoDataWeb/main/ancillaryData/gdOpen/sourceData/ADM0/" + document.csv_list.value + ".csv">View raw data</a>
 -->
