Fixed popus; fixed box sizing

--- a/geoData.html
+++ b/geoData.html
@@ -81,7 +81,7 @@
 					<div id="map-and-toolbox-div" class="row gtr-200" style="width:100%; margin-left:0; margin-bottom:25px">
 						<div class="col-7 col-12-medium" style="padding-left:0">
 							<div id="fullscreen" class="fullscreen">
-								<div id="map" class="map">
+								<div id="map" class="map" style="height:725px">
 								</div>
 							</div>
 						</div>
@@ -97,7 +97,7 @@
 										<li class='tab active'><a href="geoData.html">Country Data</a></li>
 									</ul>
 									
-									<div id="countries" class="box" style="font-size:14pt; height:575px">
+									<div id="countries" class="box" style="font-size:14pt; height:700px">
 									  <div style="padding:15px">
 
 									    <div class="row" style="margin-top:10px">
@@ -539,7 +539,7 @@ WWTARIFAVG
 
 
 					
-					<div id="countries-overview" class="row box" style="width:100%; margin:25px 0px">
+					<div id="countries-overview" class="row box" style="width:100%; margin:150px 0px">
 						<div id="countries-overview-banner" style="width:100%; text-align:center">
 							<h2 style="margin-bottom:5px">Countries</h2>
 						</div>
@@ -562,7 +562,7 @@ WWTARIFAVG
 		</div>
 
 		<!-- Popups -->
-		<!--
+		
 		<div id="country-popup" class="popup is-hidden is-visually-hidden">
             <div class="popup-content">
 
@@ -591,7 +591,7 @@ WWTARIFAVG
                         <div id="country-info-map" class="map" style="height:300px">
                         </div>
                     </div>
-
+<!--
                     <h4>Sources:</h4>
                     <div style="width:100%; margin:0; padding:0; overflow:auto">
                         <table id="country-sources-table" class="table" style="margin-left:20px">
@@ -608,12 +608,16 @@ WWTARIFAVG
                             </tbody>
                         </table>
                     </div>
+		    -->
+		     <h4>Value:</h4>
+		     <div id="value-entry">
+		     </div> 
 
                 </div>
 
             </div>
         </div>
--->
+
 
 		<!-- Sidebar -->
 		<div id="sidebar" , class="inactive">
