Failed attempt at avoiding match table row page break when making pdf

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -461,7 +461,7 @@
 								<span class="gb-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 								<br>
 								<div id="gb-names-table-div" style="margin-top:10px">
-									<table id="gb-names-table" class="gb-table" style="margin-left:10px">
+									<table id="gb-names-table" class="gb-table" style="margin-left:10px; page-break-after:auto">
 										<thead>
 											<th>
 												<select id="gb-names-table-select" style="color:black; font-size:smaller" onchange="gbFieldsDropdownChanged()">
@@ -481,7 +481,7 @@
 								<span class="comp-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 								<br>
 								<div id="comparison-names-table-div" style="margin-top:10px">
-									<table id="comparison-names-table" class="comparison-table" style="margin-left:10px">
+									<table id="comparison-names-table" class="comparison-table" style="margin-left:10px; page-break-after:auto">
 										<thead>
 											<th>
 												<select id="comparison-names-table-select" style="color:black; font-size:smaller" onchange="comparisonFieldsDropdownChanged()">
