--- a/downloadCGAZ.html
+++ b/downloadCGAZ.html
@@ -138,7 +138,7 @@
 					<h2>Download CGAZ</h2>
 					<div style="background-color:#f1d8d8; margin:2em 0 !important; padding:1em; ">
 <b>Uses of this data require <a href="index.html#citation">acknowledgement</a></b><br />
-Please note that CGAZ is built once with each release.  The current version of CGAZ is built using geoBoundaries 4.0.
+Please note that CGAZ is built manually, and may not match the currently most-recent data.  The current version of CGAZ was built using geoBoundaries Open on 11/18/2021 (<a href="https://github.com/wmgeolab/geoBoundaries/tree/f18459ed06a74c63ad2f07077d4df4ef307a3591">Commit 7077</a>)
 </div>
 
 
@@ -151,24 +151,28 @@ Please note that CGAZ is built once with each release.  The current version of C
 												<td><b>GeoJSON</b></td>
 												<td><b>TopoJSON</b></td>
 												<td><b>Shapefile</b></td>
+												<td><b>geoPackage</b></td>
 											</tr>
 											<tr>
 												<td>ADM0</td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"><i class='fa fa-download'></i>379MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.topojson"><i class='fa fa-download'></i>54MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"><i class='fa fa-download'></i>99MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.gpkg"><i class='fa fa-download'></i>162MB</a></td>
 											</tr>
 											<tr>
 												<td>ADM1</td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>373MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.topojson"><i class='fa fa-download'></i>55MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.zip"><i class='fa fa-download'></i>109MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.gpkg"><i class='fa fa-download'></i>163MB</a></td>
 											</tr>
 											<tr>
 												<td>ADM2</td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>655MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.topojson"><i class='fa fa-download'></i>106MB</a></td>
 												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.zip"><i class='fa fa-download'></i>185MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.gpkg"><i class='fa fa-download'></i>317MB</a></td>
 											</tr>
 										</tbody>
 									</table>
