Fix comparison boundary upload

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -145,6 +145,8 @@
 												<span data-text="Upload a zipped shapefile, geoJSON or topoJSON.  Expects WGS84 (EPSG 4326)." class="tooltip">
 													(?)
 												</span>
+												<select id="comparison-file-select" onchange="comparisonFileDropdownChanged()" style="width:90%; margin-top:10px; margin-left:20px">
+												</select>
 											</div>
 											
 											<div id="comparison-info-div" style="padding:5px; height:75%; overflow:auto">
