Fix comparison source error from previous commit, and some formatting

--- a/gbContribute.html
+++ b/gbContribute.html
@@ -76,8 +76,9 @@
 
                     <div>
 
-                        <p>We welcome new submissions to geoBoundaries, and will openly assess any submissions that would improve our data.
-                        Please review the <a href="https://github.com/wmgeolab/geoBoundaries/blob/main/CONTRIBUTING.md" target='blank'>Guidelines for Submission</a>. 
+                        <p>Fill out this form to make a new boundary submissions to geoBoundaries.
+                            The information you provide will be formatted, packaged, and submitted as a new <a href="https://github.com/wmgeolab/geoBoundaries/pulls" target="_blank">Pull Request to our Github repository</a>. 
+                            For more information, please review the <a href="https://github.com/wmgeolab/geoBoundaries/blob/main/CONTRIBUTING.md" target='_blank'>Guidelines for Submission</a>. 
                         </p>
                     
                         <!--https://gbcontributebackend.herokuapp.com-->
