--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -10,6 +10,8 @@
 	<title>geoBoundaries</title>
 	<meta charset="utf-8" />
     <link rel="stylesheet" href="assets/css/ol.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/ol-ext.min.css" type="text/css">
+	<!--<link rel="stylesheet" href="https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.css" />-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" type="text/css" href="assets/js/slick/slick.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -165,6 +167,39 @@
 		</div>
 
         <!-- Popups -->
+		<style>
+			.ol-popup {
+				position: absolute;
+				background-color: white;
+				box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+				padding: 15px;
+				border-radius: 10px;
+				border: 1px solid #cccccc;
+				bottom: 12px;
+				left: -50px;
+				min-width: 280px;
+			}
+			.ol-popup-closer {
+				text-decoration: none;
+				position: absolute;
+				top: 2px;
+				right: 8px;
+			}
+			.ol-popup-closer:after {
+				content: "✖";
+			}
+		</style>
+		<div id="country-popup" class="ol-popup">
+			<a href="#" id="popup-closer" class="ol-popup-closer" onclick="closeCountryPopup()"></a>
+			<div id="popup-content">
+				<h3 id="country-details-title">Title</h3>
+				<div style="max-height:200px; overflow:auto">
+					<table id="country-details-source-table" class="table">
+					</table>
+				</div>
+			</div>
+		</div>
+		<!--
         <div id="country-popup" class="popup is-hidden is-visually-hidden">
             <div class="popup-content">
 
@@ -214,6 +249,7 @@
 
             </div>
         </div>
+		-->
 
 		<!-- Sidebar -->
 		<div id="sidebar" , class="inactive">
@@ -308,6 +344,8 @@
 	</script>
 
 	<script src="assets/js/ol.js"></script>
+	<script src="assets/js/ol-ext.min.js"></script>
+	<!--<script type="text/javascript" src="https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.js"></script>-->
 
 	<script src="assets/js/internalHelpers.js"></script>
 	<script src="assets/js/internalData.js"></script>
