--- a/geoContrast.html
+++ b/geoContrast.html
@@ -190,7 +190,7 @@
 											</span>
 											<div id="comparison-file-div">
 												<span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
-													<input id="comparison-file-input" class="fas" type="file" accept=".zip" onchange="handleComparisonFileUpload(this)">
+													<input id="comparison-file-input" class="fas" type="file" accept=".zip">
 												</span>
 												<span data-text="Upload a zipped shapefile.  Expects WGS84 (EPSG 4326)." class="tooltip">
 													(?)
@@ -811,6 +811,9 @@
 	<script type="text/javascript" src="assets/js/shp2geojson/lib/jszip-utils-ie.js"></script>
 	<script src="assets/js/shp2geojson/preprocess.js"></script>
 	<script src="assets/js/shp2geojson/preview.js"></script>
+
+	<!-- alternatively use shapefile-js -->
+	<script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
 
 	<!--this is for dynamic boundary stats-->
 	<!--<script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>-->
