--- a/geoContrast.html
+++ b/geoContrast.html
@@ -548,6 +548,36 @@
 								<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
 								<h3 style="margin-bottom:0; padding-bottom:0">Main Boundary:</h3>
 								<span class="gb-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
+							</div>
+							<div id="right-table-div" style="width:45%">
+								<hr style="border-color:rgb(255,0,0); background-color:rgb(255,0,0); margin:3px; height:3px">
+								<h3 style="margin-bottom:0; padding-bottom:0">Comparison Boundary:</h3>
+								<span class="comp-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
+							</div>
+							<br>
+							<div id="match-table-div" style="width:90%">
+								<table id="match-table" class="table" style="margin-left:10px; page-break-after:auto">
+									<thead>
+										<th style="width:50%">
+											<select id="gb-names-table-select" style="color:black; font-size:smaller" onchange="gbFieldsDropdownChanged()">
+												<option selected>(Select name field)</option>
+											</select>
+										</th>
+										<th style="width:50%">
+											<select id="comparison-names-table-select" style="color:black; font-size:smaller" onchange="comparisonFieldsDropdownChanged()">
+												<option selected>(Select name field)</option>
+											</select>
+										</th>
+									</thhead>
+									<tbody id="gb-names-table-tbody">
+									</tbody>
+								</table>
+							</div>
+							<!--
+							<div id="left-table-div" style="width:45%">
+								<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
+								<h3 style="margin-bottom:0; padding-bottom:0">Main Boundary:</h3>
+								<span class="gb-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 								<br>
 								<div id="gb-names-table-div" style="margin-top:10px">
 									<table id="gb-names-table" class="gb-table" style="margin-left:10px; page-break-after:auto">
@@ -584,6 +614,7 @@
 									</table>
 								</div>
 							</div>
+							-->
 						</div>
 
 					</div>
