--- a/geoContrast.html
+++ b/geoContrast.html
@@ -573,6 +573,21 @@
 									</tbody>
 								</table>
 							</div>
+							<div style="width:100%; text-align:center">
+								<h2 style="margin-bottom:5px">No Match</h2>
+							</div>
+							<div id="nomatch-table-div" style="width:90%">
+								<table id="nomatch-table" class="table" style="margin-left:10px; page-break-after:auto">
+									<thead>
+										<th style="width:50%">
+										</th>
+										<th style="width:50%">
+										</th>
+									</thead>
+									<tbody>
+									</tbody>
+								</table>
+							</div>
 							<!--
 							<div id="left-table-div" style="width:45%">
 								<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
