Fix so multiple feats cant be matched to the same

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -544,12 +544,12 @@
 								<div id="total-similarity" class="stats-percent" style="height:20px; width:40%"><span style="--data-width:0%"></span><p>Finding matches...</p></div>
 								<br><br>
 							</div>
-							<div id="left-table-div" style="width:45%">
+							<div id="left-table-header" style="width:45%">
 								<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
 								<h3 style="margin-bottom:0; padding-bottom:0">Main Boundary:</h3>
 								<span class="gb-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
 							</div>
-							<div id="right-table-div" style="width:45%">
+							<div id="right-table-header" style="width:45%">
 								<hr style="border-color:rgb(255,0,0); background-color:rgb(255,0,0); margin:3px; height:3px">
 								<h3 style="margin-bottom:0; padding-bottom:0">Comparison Boundary:</h3>
 								<span class="comp-source-title" style="font-style:italic; color:gray; margin-left:15px;">None</span>
@@ -569,7 +569,7 @@
 											</select>
 										</th>
 									</thhead>
-									<tbody id="gb-names-table-tbody">
+									<tbody>
 									</tbody>
 								</table>
 							</div>
